# starry

./: Cargo.toml  build_server.sh  build_web.sh  run_server.sh
docs/: 笔记.md
site/: index.html
site/pkg/: package.json  starry.d.ts  starry.js  starry_bg.wasm.d.ts
starry/: Cargo.toml  LICENSE_MIT
starry-native/: Cargo.toml
starry-native/src/: main.rs
starry-server/: Cargo.toml
starry-server/src/: main.rs
starry/src/: app.rs  lib.rs
starry/src/plugins/: web.rs
